<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/folder_pairs" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/folderPairName"
        android:hint="@string/pair_name"
        android:inputType="text|textNoSuggestions"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/localFolderField"
        android:hint="@string/local_folder"
        android:inputType="text|textNoSuggestions"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/remoteFolderField"
        android:hint="@string/remote_folder"
        android:inputType="text|textNoSuggestions"
        />

    <Spinner
        android:id="@+id/connection_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
    />


</LinearLayout>