<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hostNameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/host_message"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/usernameField"
        android:hint="@string/username_message"
        android:inputType="text|textNoSuggestions" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:id="@+id/quickConnect"
        android:onClick="connectToServer"
        android:layout_alignParentLeft="true" />

</LinearLayout>