<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/quickConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp"
            android:text="@string/quick_connect" />

        <TextView
            android:id="@+id/SavedConnections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/saved_connections"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="7dp" />

        <ListView
            android:id="@+id/connections_list"
            android:layout_marginTop="2dp"
            android:background="@drawable/rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <View style="@style/Divider" />

        <Button
            android:id="@+id/SyncAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp"
            android:text="@string/sync_all"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="1dp"
            android:text="@string/sync_folders"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="7dp" />

        <ListView
            android:id="@+id/folder_pair_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="2dp"
            android:background="@drawable/rounded" />

    </LinearLayout>

</LinearLayout>



